--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html><!-- Last Published: Wed Oct 28 2020 11:19:57 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="nero-portfolio.webflow.io" data-wf-page="5f067b661807eba0ab6fe572" data-wf-site="5f067b661807eb95a36fe56a"
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2565931259035416" crossorigin="anonymous">
+        
+    </script>
     <meta charset="utf-8"/>
     <title>Contact</title>
     <meta content="Discover Fey a beautiful personal portfolio template for creatives &amp; developers. Get online today, and showcase your projects in style." name="description"/><meta content="Nero - Webflow HTML Website Template" property="og:title"/>
