--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html><!-- Last Published: Wed Oct 28 2020 11:19:57 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="nero-portfolio.webflow.io" data-wf-page="5f067b661807eb71b86fe56e" data-wf-site="5f067b661807eb95a36fe56a">
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2565931259035416"crossorigin="anonymous">
+            
+        </script>
         <meta charset="utf-8"/>
         <title>How do you use time tracking for projects? | Portfolio</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -35,7 +38,7 @@
                     <h1 class="content-h1">How do you use time tracking for projects?</h1>
                     <div class="blog-author">
                         <div class="blog-image-wrap">
-                            <img src="https://scontent.fuet2-1.fna.fbcdn.net/v/t39.30808-6/p843x403/269873852_3007954839462508_7580263696037591077_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHmSv-RHrZ63W2sakWJf1CuzqYGIP-mEW7OpgYg_6YRbpJZoaMTlm-o3oqTFL5pQiOu-G6SOLYpySO7KydjFlWX&_nc_ohc=uelTOWmHQPwAX_73YAz&tn=bGOp0zfrOZQlO7IY&_nc_ht=scontent.fuet2-1.fna&oh=00_AT_logGPGGJnP7g-fmNIQ5D49EOcPFiEDHI_HbEo4W0HXA&oe=61D3AEB1" srcset="https://scontent.fuet2-1.fna.fbcdn.net/v/t39.30808-6/p843x403/269873852_3007954839462508_7580263696037591077_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHmSv-RHrZ63W2sakWJf1CuzqYGIP-mEW7OpgYg_6YRbpJZoaMTlm-o3oqTFL5pQiOu-G6SOLYpySO7KydjFlWX&_nc_ohc=uelTOWmHQPwAX_73YAz&tn=bGOp0zfrOZQlO7IY&_nc_ht=scontent.fuet2-1.fna&oh=00_AT_logGPGGJnP7g-fmNIQ5D49EOcPFiEDHI_HbEo4W0HXA&oe=61D3AEB1 500w, https://scontent.fuet2-1.fna.fbcdn.net/v/t39.30808-6/p843x403/269873852_3007954839462508_7580263696037591077_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHmSv-RHrZ63W2sakWJf1CuzqYGIP-mEW7OpgYg_6YRbpJZoaMTlm-o3oqTFL5pQiOu-G6SOLYpySO7KydjFlWX&_nc_ohc=uelTOWmHQPwAX_73YAz&tn=bGOp0zfrOZQlO7IY&_nc_ht=scontent.fuet2-1.fna&oh=00_AT_logGPGGJnP7g-fmNIQ5D49EOcPFiEDHI_HbEo4W0HXA&oe=61D3AEB1 800w, https://scontent.fuet2-1.fna.fbcdn.net/v/t39.30808-6/p843x403/269873852_3007954839462508_7580263696037591077_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHmSv-RHrZ63W2sakWJf1CuzqYGIP-mEW7OpgYg_6YRbpJZoaMTlm-o3oqTFL5pQiOu-G6SOLYpySO7KydjFlWX&_nc_ohc=uelTOWmHQPwAX_73YAz&tn=bGOp0zfrOZQlO7IY&_nc_ht=scontent.fuet2-1.fna&oh=00_AT_logGPGGJnP7g-fmNIQ5D49EOcPFiEDHI_HbEo4W0HXA&oe=61D3AEB1 1080w, https://scontent.fuet2-1.fna.fbcdn.net/v/t39.30808-6/p843x403/269873852_3007954839462508_7580263696037591077_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHmSv-RHrZ63W2sakWJf1CuzqYGIP-mEW7OpgYg_6YRbpJZoaMTlm-o3oqTFL5pQiOu-G6SOLYpySO7KydjFlWX&_nc_ohc=uelTOWmHQPwAX_73YAz&tn=bGOp0zfrOZQlO7IY&_nc_ht=scontent.fuet2-1.fna&oh=00_AT_logGPGGJnP7g-fmNIQ5D49EOcPFiEDHI_HbEo4W0HXA&oe=61D3AEB1 1334w" sizes="65px" alt="" class="author-blog-image"/>
+                            <img src="https://ahmedali4533.github.io/test.github.io/front.jpg" srcset="https://ahmedali4533.github.io/test.github.io/front.jpg 500w, https://ahmedali4533.github.io/test.github.io/front.jpg 800w, https://ahmedali4533.github.io/test.github.io/front.jpg 1080w, https://ahmedali4533.github.io/test.github.io/front.jpg 1334w" sizes="65px" alt="" class="author-blog-image"/>
                         </div>
                         <div>
                             <div class="author-name-blog">Ahmed Ali</div>
